🐛 fix overflow on x-axis (thanks @linuss1)

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     background-color: white;
+    overflow: hidden;
 }
 
 .uppercase {
